--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,6 +11,14 @@ a {
   text-decoration: none;
 }
 
+a::-moz-selection {
+  background-color: black;
+}
+
+a::selection {
+  background-color: black;
+}
+
 .section-loader {
   position: absolute;
   height: 100%;
@@ -878,10 +886,10 @@ footer img {
   .nav {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 3;
-        grid-template-columns: 3;
-    -ms-grid-rows: 2;
-        grid-template-rows: 2;
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
     margin: 30px 0;
   }
   .nav h2 {
@@ -928,10 +936,10 @@ footer img {
   #restaurants {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 2;
-        grid-template-columns: 2;
-    -ms-grid-rows: 3;
-        grid-template-rows: 3;
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
   }
   #restaurants h2 {
     border-bottom: 2px solid #9356DC;
