--- a/sass/layout/_tablette_desktop-acceuil.scss
+++ b/sass/layout/_tablette_desktop-acceuil.scss
@@ -115,8 +115,8 @@
     }
    .nav{
        display: grid;
-       grid-template-columns: 3;
-       grid-template-rows: 2;
+       grid-template-columns: auto;
+       grid-template-rows: auto;
        margin: 30px 0;
        & h2{
            color: rgb(41, 40, 40);
@@ -161,8 +161,8 @@
             margin-left: 25px;
         }
         display: grid;
-        grid-template-columns: 2;
-        grid-template-rows: 3;
+        grid-template-columns: auto;
+        grid-template-rows: auto;
    }
    .card{
        margin: 20px 40px;
