--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -33,6 +33,10 @@ $fond: #f6f6f6;
     background-clip: text;
     -webkit-background-clip: text;
     opacity: 0;
+    bottom: 0;
+    right: 0;
+    top: 0;
+    left: 0;
 }
 a{
     color: inherit;
