--- a/sass/layout/_acceuil.scss
+++ b/sass/layout/_acceuil.scss
@@ -210,25 +210,27 @@ section{
             font-size: 18px;
             font-weight: bold;
         }
-        &--vide{
-            cursor: pointer;
+        // Modification animation du coeur
+        &--heart{
             position: relative;
+            font-size: 20px;
             &:hover{
-                & + .card__text--plein{
-                    animation: remplissage 1s ease-in forwards;
-                    right: 20px;
+                & > .card__text--plein{
+                    animation: remplissage 0.6s ease-in forwards;
                 }
-                &::before{
+                & > .card__text--vide::before{
                     content: '\f004';
-                    animation: opac 950ms linear forwards;
-                }
+                    animation: opac .6s linear forwards;                    
+                } 
             }
         }
         &--plein{
             @include coeur-plein;
-        }
+
+        } 
     }
 }
+
 // ---------------------------------------------------------------------------------------------\\
 // ---------------------------------------FOOTER-----------------------------------------\\
 // ---------------------------------------------------------------------------------------------\\
