--- a/sass/keyframe/_keyframe.scss
+++ b/sass/keyframe/_keyframe.scss
@@ -37,21 +37,21 @@
         transform-origin: center;
         opacity: 0.2;
     }
-    25%{
-        transform: scale(0.5);
-    }
-    45%{
-        transform: scale(0.3);
-    }
-    60%{
-        transform: scale(0.8);
-    }
-    75%{
-        transform: scale(0.6);
-    }
-    85%{
-        transform: scale(1);
-    }
+    // 25%{
+    //     transform: scale(0.5);
+    // }
+    // 45%{
+    //     transform: scale(0.3);
+    // }
+    // 60%{
+    //     transform: scale(0.8);
+    // }
+    // 75%{
+    //     transform: scale(0.6);
+    // }
+    // 85%{
+    //     transform: scale(1);
+    // }
     100%{
         transform: scale(1.2);
         opacity: 1;
